Bug 77169 - KURLCompletion::ExeCompletion lists directories instead of executables
Summary: KURLCompletion::ExeCompletion lists directories instead of executables
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 78197 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-03-10 11:04 UTC by Alex Ibrado
Modified: 2011-06-14 02:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Ibrado 2004-03-10 11:04:34 UTC
Version:            (using KDE KDE 3.2.1)
Installed from:    RedHat RPMs
OS:          Linux

KURLCompletion's ExeCompletion mode no longer lists executables as per KDE 3.1.x, but instead lists directories. 

Sample incorrect behavior:
1. Right-click any file in Konqueror FM
2. Select "Open With..."
3. Start entering the name of an executable
4. The KURLRequester shows directories instead.

I first took real notice of this while testing some updates to kbemusedsrv, but IIRC I saw the "Open With..." symptom in the initial KDE 3.2 release, as well.
Comment 1 Dawit Alemayehu 2011-06-04 19:30:06 UTC
Git commit d9997d711e493416a35a49cb84700c7b77441211 by Dawit Alemayehu.
Committed on 03/06/2011 at 22:51.
Pushed by adawit into branch 'master'.

- Make executable completion work in OpenWith dialog.

- Fixed the logic error that caused unnecessary creation of directory listing
  threads for each and every completion request (read: every key press).

BUG: 77169
BUG: 116639
BUG: 158124
FIXED-IN: 4.7.0
REVIEW: 101499

M  +9    -9    kio/kio/kurlcompletion.cpp     

http://commits.kde.org/kdelibs/d9997d711e493416a35a49cb84700c7b77441211
Comment 2 Dawit Alemayehu 2011-06-14 02:34:15 UTC
*** Bug 78197 has been marked as a duplicate of this bug. ***